--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pumpfun</title>
-    <meta http-equiv="refresh" content="0;url=https://pump.fun/coin/Q6q2698Jk43bsX43zBsVYk71Ck5zFHirrUG3K7hpump">
+    <meta http-equiv="refresh" content="0;url=https://pump.fun/coin/wait1sec">
     <style>
         body {
             font-family: 'Arial', sans-serif;
